# autoworkflow

./: .gitignore  Agents.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: cc-loop.mdc
docs/: DEBUGGING.md  EXIT_CODES.md  INTEGRATION.md  PROJECT_PLAN.md  RECOVERY.md  V1_TECHNICAL_DESIGN.md
src/cc_loop/: __init__.py  cli.py  config.py  detach.py  diff.py  failure.py  git.py  inspect.py  list_tasks.py  preflight.py  recovery.py  repair_prompts.py  run.py  state.py  subprocess_util.py
src/cc_loop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cc_loop/providers/: __init__.py  base.py  claude_code.py  codex.py  cursor.py
tests/: fake_providers.py  helpers.py  test_auto_recovery.py  test_cli_contract.py  test_diff.py  test_failure_classification.py  test_recovery_dispatch.py  test_run_flow.py  test_subprocess_util.py
