[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-loop"
version = "0.3.0"
description = "Local orchestrator for planner, implementer, and reviewer coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cc-loop = "cc_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
